--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -17,3 +17,20 @@
 <!-- 🐨 Append the div to the root div using `append` -->
 <!--   💰 document.getElementById('root') -->
 <!--   📜 https://developer.mozilla.org/en-US/docs/Web/API/ParentNode/append -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Excercise 1</title>
+  </head>
+  <body id="root"></body>
+  <script type="module">
+    const root = document.createElement('div')
+    const div = document.createElement('div')
+    div.textContent = 'Hello World!!!'
+    div.className = 'container'
+    root.append(div)
+    document.body.append(root)
+  </script>
+</html>
